Replace Fastpath icons
Hi,

I see that Fastpath is using old icons.
I think they need to be replaced with new ones.
Before
https://yadi.sk/i/9OR2vxG6wz06ag
After
https://yadi.sk/i/dGBd5H1KD8IYHg

--- a/core/src/main/resources/spark.properties
+++ b/core/src/main/resources/spark.properties
@@ -81,7 +81,7 @@ SMALL_ALL_AGENTS_IMAGE = images/user1_earth.png
 SMALL_WORKGROUP_QUEUE_IMAGE = images/icons/start_conference.png
 SMALL_ALL_CHATS_IMAGE = images/icons/contacts.png
 SMALL_CURRENT_AGENTS = images/icons/users.png
-HELP2_24x24 = images/help_24x24.png
+HELP2_24x24 = images/icons/help.png
 SMALL_ALARM_CLOCK = images/icons/alarmclock.png
 SMALL_SCROLL_REFRESH = images/scroll_refresh.png
 SMALL_QUESTION = images/icons/help.png
@@ -241,7 +241,7 @@ SEND_MAIL_IMAGE_16x16 = images/sendmail.png
 SEARCH_IMAGE_32x32 = images/icons/search.png
 MAIL_IMAGE_32x32 = images/mail_32x32.png
 PREFERENCES_IMAGE = images/icons/preferences.png
-NOTEBOOK_IMAGE = images/notebook.png
+NOTEBOOK_IMAGE = images/icons/notebook.png
 TEXT_BOLD = images/text_bold.png
 TEXT_ITALIC = images/text_italics.png
 TEXT_UNDERLINE = images/text_underlined.png
