--- a/plugins/fastpath/src/main/resources/fastpath.properties
+++ b/plugins/fastpath/src/main/resources/fastpath.properties
@@ -17,43 +17,43 @@ LOGIN_DIALOG_AUTHENTICATING = Authenticating...
 #MainWindow
 MAIN_IMAGE = images/message.png
 MAIN_IMAGE_ICO = images/icon_16.ico
-SMALL_CHECK = images/smallCheck.png
-SMALL_DELETE = images/smallDelete.png
-AVAILABLE_USER = images/availableUser.png
+SMALL_CHECK = images/icons/accept.png
+SMALL_DELETE = images/icons/remove.png
+AVAILABLE_USER = images/icons/user.png
 AWAY_USER = images/awayUser.png
 FIND_IMAGE = images/find.png
-SMALL_ADD_IMAGE = images/small_add.png
+SMALL_ADD_IMAGE = images/icons/search.png
 DOCUMENT_EXCHANGE_IMAGE = images/document_exchange.png
 SMALL_DOCUMENT_ADD = images/document_add.png
-SMALL_CIRCLE_DELETE = images/small_delete.png
+SMALL_CIRCLE_DELETE = images/icons/close.png
 SMALL_DOCUMENT_VIEW = images/document_view.png
-SMALL_USER1_MESSAGE = images/user1_message-16x16.png
-USER1_MESSAGE_24x24 = images/user1_message-24x24.png
+SMALL_USER1_MESSAGE = images/icons/chat_settings.png
+USER1_MESSAGE_24x24 = images/icons/chat_settings.png
 SMALL_USER1_TIME = images/user1_time.png
-SMALL_USER1_NEW = images/user1_new.png
+SMALL_USER1_NEW = images/icons/create.png
 SMALL_USER1_STOPWATCH = images/stopwatch_pause.png
 SMALL_USER1_MOBILEPHONE = images/user1_mobilephone.png
-SMALL_USER1_INFORMATION = images/user1_information.png
+SMALL_USER1_INFORMATION = images/icons/subscribe.png
 SMALL_ENTRY = images/small_entry.gif
 SMALL_AGENT_IMAGE = images/small_agent.png
 CHATTING_AGENT_IMAGE = images/user1.png
 CHATTING_CUSTOMER_IMAGE = images/user2.png
-INFORMATION_IMAGE = images/information.png
+INFORMATION_IMAGE = images/icons/about.png
 BLANK_IMAGE = images/blank.gif
 USER_HEADSET_24x24 = images/user_headset24.png
 FOLDER_CLOSED = images/folder_closed.png
 FOLDER = images/folder.png
 SMALL_PIN_BLUE = images/pin_blue.png
-SMALL_DATA_FIND_IMAGE = images/data_find.png
-SMALL_BUSINESS_MAN_VIEW = images/businessman_view.png
+SMALL_DATA_FIND_IMAGE = images/icons/search.png
+SMALL_BUSINESS_MAN_VIEW = images/icons/edit_profile.png
 SMALL_ALL_AGENTS_IMAGE = images/user1_earth.png
-SMALL_WORKGROUP_QUEUE_IMAGE = images/users_into.png
-SMALL_ALL_CHATS_IMAGE = images/users_family.png
-SMALL_CURRENT_AGENTS = images/users2.png
-HELP2_24x24 = images/help_24x24.png
-SMALL_ALARM_CLOCK = images/alarmclock.png
+SMALL_WORKGROUP_QUEUE_IMAGE = images/icons/start_conference.png
+SMALL_ALL_CHATS_IMAGE = images/icons/contacts.png
+SMALL_CURRENT_AGENTS = images/icons/users.png
+HELP2_24x24 = images/icons/help.png
+SMALL_ALARM_CLOCK = images/icons/alarmclock.png
 SMALL_SCROLL_REFRESH = images/scroll_refresh.png
-SMALL_QUESTION = images/help_16x16.png
+SMALL_QUESTION = images/icons/help.png
 USER1_32x32 = images/User1_32x32.png
 DATA_DELETE_16x16 = images/data_delete.png
 DATA_REFRESH_16x16 = images/data_refresh.png
@@ -61,26 +61,26 @@ USER1_BACK_16x16 = images/user1_back.png
 FONT_16x16 = images/font.png
 DOCUMENT_FIND_16x16 = images/document_find.png
 DOCUMENT_INFO_32x32 = images/document_info.png
-DOCUMENT_16x16 = images/document.png
-SMALL_CLOSE_BUTTON = images/deleteitem.gif
-COPY_16x16 = images/copy.png
+DOCUMENT_16x16 = images/icons/note.png
+SMALL_CLOSE_BUTTON = images/icons/close.png
+COPY_16x16 = images/icons/copy.png
 BLANK_24x24 = images/blank_24x24.png
 PUSH_URL_16x16 = images/earth_connection-16x16.png
-LINK_16x16 = images/link-16x16.png
-LINK_DELETE_16x16 = images/link_delete.png
+LINK_16x16 = images/icons/link.png
+LINK_DELETE_16x16 = images/icons/link_delete.png
 EARTH_LOCK_16x16 = images/earth_lock-16x16.png
-LOCK_16x16 = images/lock-16x16.png
-LOCK_UNLOCK_16x16 = images/lock_unlock-16x16.png
+LOCK_16x16 = images/icons/lock.png
+LOCK_UNLOCK_16x16 = images/icons/unlock.png
 ONLINE_ICO = images/icon1.ico
 OFFLINE_ICO = images/icon2.ico
 INFORMATION_ICO = images/icon3.ico
-SAVE_AS_16x16 = images/save_as.png
+SAVE_AS_16x16 = images/icons/save.png
 NOTE_EDIT_16x16 = images/note_edit.png
-ADDRESS_BOOK_16x16 = images/address_book.png
-MEGAPHONE_16x16 = images/megaphone.png
+ADDRESS_BOOK_16x16 = images/icons/address_book.png
+MEGAPHONE_16x16 = images/icons/broadcast.png
 EARTH_VIEW_16x16 = images/earth_view.png
-HISTORY_16x16 = images/history.png
-DOWNLOAD_16x16 = images/download.png
+HISTORY_16x16 = images/icons/history.png
+DOWNLOAD_16x16 = images/icons/downloads.png
 RED_FLAG_16x16 = images/flag_red.png
 GREEN_FLAG_16x16 = images/flag_green.png
 YELLOW_FLAG_16x16 = images/flag_yellow.png
@@ -99,20 +99,20 @@ PAWN_GLASS_YELLOW = images/pawn_glass_yellow.png
 PLUS_SIGN = images/plus-sign.png
 MINUS_SIGN = images/minus-sign.png
 MAGICIAN_IMAGE = images/magician.png
-FIND_TEXT_IMAGE = images/find_text.png
-LOGIN_KEY_IMAGE = images/login-key.png
-BRICKWALL_IMAGE = images/brickwall.png
+FIND_TEXT_IMAGE = images/icons/lookup.png
+LOGIN_KEY_IMAGE = images/icons/login.png
+BRICKWALL_IMAGE = images/icons/block.png
 MODERATOR_IMAGE = images/moderator.gif
-DESKTOP_IMAGE = images/desktop.png
+DESKTOP_IMAGE = images/icons/tasklist.png
 SPELL_CHECK_IMAGE = images/text_ok.png
 BUSY_IMAGE = images/busy.gif
-CLOSE_IMAGE = images/close.png
+CLOSE_IMAGE = images/icons/close.png
 VIEW_IMAGE = images/view.png
 MOBILE_PHONE_IMAGE = images/mobilephone.png
-ON_PHONE_IMAGE = images/on-phone.png
-REFRESH_IMAGE = images/refresh.png
-CLOSE_WHITE_X_IMAGE = images/close_white.png
-CLOSE_DARK_X_IMAGE = images/close_dark.png
+ON_PHONE_IMAGE = images/icons/on-phone.png
+REFRESH_IMAGE = images/icons/refresh.png
+CLOSE_WHITE_X_IMAGE = images/icons/close.png
+CLOSE_DARK_X_IMAGE = images/icons/close.png
 
 
 # Global Values
@@ -162,48 +162,48 @@ CO_BROWSER_TAB_TITLE = Co-Browser
 FORUM_TAB_TITLE = Forums
 
 #Images
-CONFERENCE_IMAGE_24x24 = images/conference_24x24.png
-CONFERENCE_IMAGE_16x16 = images/conference_16x16.png
-PROFILE_IMAGE_24x24 = images/profile_24x24.png
-SEARCH_USER_16x16 = images/search_user_16x16.png
-SEND_FILE_24x24 = images/send_file_24x24.png
-ADD_IMAGE_24x24 = images/add_24x24.png
-TELEPHONE_24x24 = images/telephone_24x24.png
+CONFERENCE_IMAGE_24x24 = images/icons/invite24.png
+CONFERENCE_IMAGE_16x16 = images/icons/conference.png
+PROFILE_IMAGE_24x24 = images/icons/profile24.png
+SEARCH_USER_16x16 = images/icons/search.png
+SEND_FILE_24x24 = images/icons/send_file24.png
+ADD_IMAGE_24x24 = images/icons/add_user_24.png
+TELEPHONE_24x24 = images/icons/phone.png
 IM_DND = images/im_dnd.png
 IM_AWAY = images/im_away.png
 MESSAGE_AWAY = images/message_away.png
 MESSAGE_DND = images/message_dnd.png
-ERASER_IMAGE = images/eraser.gif
+ERASER_IMAGE = images/icons/clear.png
 TOOLBAR_BACKGROUND = images/toolbar.png
 TRAFFIC_LIGHT_IMAGE = images/traffic-light.png
-SERVER_ICON = images/server.png
-BOOKMARK_ICON = images/bookmark.png
-ADD_BOOKMARK_ICON = images/bookmark_add.png
-DELETE_BOOKMARK_ICON = images/bookmark_delete.png
+SERVER_ICON = images/icons/conferences.png
+BOOKMARK_ICON = images/icons/bookmark.png
+ADD_BOOKMARK_ICON = images/icons/bookmark.png
+DELETE_BOOKMARK_ICON = images/icons/remove.png
 CLEAR_BALL_ICON = images/bullet_ball_glass_clear.png
 CALL_ICON = images/call.png
 PROFILE_ICON = images/profile.png
-SEND_FILE_ICON = images/document_into.png
-ADD_CONTACT_IMAGE = images/add_contact.png
-JOIN_GROUPCHAT_IMAGE = images/join_groupchat.png
+SEND_FILE_ICON = images/icons/send_file.png
+ADD_CONTACT_IMAGE = images/icons/add_user.png
+JOIN_GROUPCHAT_IMAGE = images/icons/join.png
 DOWN_ARROW_IMAGE = images/down_arrow.gif
-PRINTER_IMAGE_16x16 = images/printer.png
+PRINTER_IMAGE_16x16 = images/icons/print.png
 SEND_MAIL_IMAGE_16x16 = images/sendmail.png
-SEARCH_IMAGE_32x32 = images/search_32x32.png
+SEARCH_IMAGE_32x32 = images/icons/search.png
 MAIL_IMAGE_32x32 = images/mail_32x32.png
-PREFERENCES_IMAGE = images/preferences.png
-NOTEBOOK_IMAGE = images/notebook.png
+PREFERENCES_IMAGE = images/icons/preferences.png
+NOTEBOOK_IMAGE = images/icons/notebook.png
 TEXT_BOLD = images/text_bold.png
 TEXT_ITALIC = images/text_italics.png
 TEXT_UNDERLINE = images/text_underlined.png
 TEXT_NORMAL = images/text_normal.png
-SMALL_USER_ENTER = images/smallUserEnter.png
-SMALL_USER_DELETE = images/smallUserDelete.png
+SMALL_USER_ENTER = images/icons/join.png
+SMALL_USER_DELETE = images/icons/remove.png
 QUESTIONS_ANSWERS = images/questionsAnswers.png
-SMALL_MESSAGE_IMAGE = images/message.png
-SMALL_MESSAGE_EDIT_IMAGE = images/message_edit.png
-SMALL_ABOUT_IMAGE = images/about.png
-DOOR_IMAGE = images/door.gif
+SMALL_MESSAGE_IMAGE = images/icons/start_chat.png
+SMALL_MESSAGE_EDIT_IMAGE = images/icons/edit.png
+SMALL_ABOUT_IMAGE = images/icons/about.png
+DOOR_IMAGE = images/icons/join.png
 STAR_BLUE_IMAGE = images/star_blue.png
 STAR_RED_IMAGE = images/star_red.png
 STAR_GREY_IMAGE = images/star_grey.png
@@ -213,18 +213,18 @@ LEFT_ARROW_IMAGE = images/arrow_left_green.png
 RIGHT_ARROW_IMAGE = images/arrow_right_green.png
 BACKGROUND_IMAGE = images/background.png
 FREE_TO_CHAT_IMAGE = images/im_free_chat.png
-SOUND_PREFERENCES_IMAGE = images/text_loudspeaker.png
+SOUND_PREFERENCES_IMAGE = images/icons/sound.png
 SPARK_LOGOUT_IMAGE = images/spark_100.jpg
-PHOTO_IMAGE = images/photo_scenery.png
-PLUGIN_IMAGE = images/plugin-16x16.gif
+PHOTO_IMAGE = images/icons/screenshot24.png
+PLUGIN_IMAGE = images/icons/plugins.png
 SMALL_PROFILE_IMAGE = images/small_profile.png
 CHANGELOG_IMAGE = images/doc-changelog-16x16.gif
 README_IMAGE = images/doc-readme-16x16.gif
 DOWN_OPTION_IMAGE = images/option.png
 STICKY_NOTE_IMAGE = images/sticky.png
-HISTORY_24x24 = images/history-24x24.png
-PANE_UP_ARROW_IMAGE = images/metallic_up.png
-PANE_DOWN_ARROW_IMAGE = images/metallic_down.png
+HISTORY_24x24 = images/icons/history24.png
+PANE_UP_ARROW_IMAGE = images/icons/collapse_up.png
+PANE_DOWN_ARROW_IMAGE = images/icons/collapse_down.png
 
 #Fastpath Icons
 FASTPATH_IMAGE_16x16 = images/fastpath16.png
@@ -235,7 +235,7 @@ CIRCLE_CHECK_IMAGE = images/check.png
 TRANSFER_IMAGE_24x24 = images/transfer-24x24.png
 FASTPATH_OFFLINE_IMAGE_16x16 = images/fastpath16_offline.png
 FASTPATH_OFFLINE_IMAGE_24x24 = images/fastpath24_offline.png
-USER1_ADD_16x16 = images/user1_add.png
+USER1_ADD_16x16 = images/icons/add_user.png
 END_BUTTON_24x24 = images/end_button_24x24.png
 POWERED_BY_IMAGE = images/powered_by.png
 CHAT_INVITE_IMAGE_24x24 = images/icon_chatinvite_24x24.png
