--- a/plugins/fastpath/src/main/resources/fastpath.properties
+++ b/plugins/fastpath/src/main/resources/fastpath.properties
@@ -22,7 +22,7 @@ SMALL_DELETE = images/icons/remove.png
 AVAILABLE_USER = images/icons/user.png
 AWAY_USER = images/awayUser.png
 FIND_IMAGE = images/find.png
-SMALL_ADD_IMAGE = images/icons/search.png
+SMALL_ADD_IMAGE = images/icons/add.png
 DOCUMENT_EXCHANGE_IMAGE = images/document_exchange.png
 SMALL_DOCUMENT_ADD = images/document_add.png
 SMALL_CIRCLE_DELETE = images/icons/close.png
@@ -34,7 +34,7 @@ SMALL_USER1_NEW = images/icons/create.png
 SMALL_USER1_STOPWATCH = images/stopwatch_pause.png
 SMALL_USER1_MOBILEPHONE = images/user1_mobilephone.png
 SMALL_USER1_INFORMATION = images/icons/subscribe.png
-SMALL_ENTRY = images/small_entry.gif
+SMALL_ENTRY = images/icons/small_entry.png
 SMALL_AGENT_IMAGE = images/small_agent.png
 CHATTING_AGENT_IMAGE = images/user1.png
 CHATTING_CUSTOMER_IMAGE = images/user2.png
@@ -232,7 +232,7 @@ FASTPATH_IMAGE_24x24 = images/fastpath24.png
 FASTPATH_IMAGE_32x32 = images/fastpath32.png
 FASTPATH_IMAGE-64x63 = images/fastpath64.png
 CIRCLE_CHECK_IMAGE = images/check.png
-TRANSFER_IMAGE_24x24 = images/transfer-24x24.png
+TRANSFER_IMAGE_24x24 = images/icons/add_user_24.png
 FASTPATH_OFFLINE_IMAGE_16x16 = images/fastpath16_offline.png
 FASTPATH_OFFLINE_IMAGE_24x24 = images/fastpath24_offline.png
 USER1_ADD_16x16 = images/icons/add_user.png
