--- a/core/src/main/resources/spark.properties
+++ b/core/src/main/resources/spark.properties
@@ -37,11 +37,13 @@ PRIVACY_DEACTIVATE_LIST = images/icons/privacy_list_deactivate.png
 MAIN_IMAGE = images/spark-64x64.png
 TRAY_IMAGE = images/spark-16x16.png
 TRAY_AWAY = images/Away.png
+TRAY_XAWAY = images/XAway.png
 TRAY_DND = images/DoNotDisturb.png
 TRAY_OFFLINE = images/spark_tray_offline-16x16.png
 TRAY_CONNECTING = images/spark_tray_connecting-16x16.png
 TRAY_IMAGE_LINUX = images/spark-24x24.png
 TRAY_AWAY_LINUX = images/Away-24x24.png
+TRAY_XAWAY_LINUX = images/XAway-24x24.png
 TRAY_DND_LINUX = images/DoNotDisturb-24x24.png
 TRAY_OFFLINE_LINUX = images/spark_tray_offline-24x24.png
 TRAY_CONNECTING_LINUX = images/spark_tray_connecting-24x24.png
@@ -213,6 +215,7 @@ ADD_IMAGE_24x24 = images/icons/add_user_24.png
 TELEPHONE_24x24 = images/icons/phone.png
 IM_DND = images/im_dnd.png
 IM_AWAY = images/im_away.png
+IM_XA = images/im_xa.png
 INVISIBLE = images/im_invisible.png
 MESSAGE_AWAY = images/Away.png
 MESSAGE_DND = images/DoNotDisturb.png
@@ -328,6 +331,7 @@ SMALL_STOP = images/smallStop.png
 #Stale Images
 IM_AVAILABLE_STALE_IMAGE = images/im_available_stale.png
 IM_AWAY_STALE_IMAGE = images/im_away_stale.png
+IM_XA_STALE_IMAGE = images/im_xa_stale.png
 IM_DND_STALE_IMAGE = images/im_dnd_stale.png
 IM_FREE_CHAT_STALE_IMAGE = images/im_free_chat_stale.png
 IM_UNAVAILABLE_STALE_IMAGE = images/im_unavailable_stale.png
