Add new icons for statuses

--- a/core/src/main/resources/spark.properties
+++ b/core/src/main/resources/spark.properties
@@ -125,7 +125,7 @@ MAIL_16x16 = images/mail_16x16.png
 MAIL_FORWARD_16x16 = images/mail_forward_16x16.png
 MAIL_INTO_16x16 = images/mail_into_16x16.png
 RED_BALL = images/red-ball.png
-GREEN_BALL = images/im_available.png
+GREEN_BALL = images/icons/im_available.png
 BLUE_BALL = images/blue-ball.png
 YELLOW_BALL = images/yellow-ball.png
 PAWN_GLASS_GREEN = images/pawn_glass_green.png
@@ -213,10 +213,10 @@ SEARCH_USER_16x16 = images/icons/search.png
 SEND_FILE_24x24 = images/icons/send_file24.png
 ADD_IMAGE_24x24 = images/icons/add_user_24.png
 TELEPHONE_24x24 = images/icons/phone.png
-IM_DND = images/im_dnd.png
-IM_AWAY = images/im_away.png
-IM_XA = images/im_xa.png
-INVISIBLE = images/im_invisible.png
+IM_DND = images/icons/im_dnd.png
+IM_AWAY = images/icons/im_away.png
+IM_XA = images/icons/im_xa.png
+INVISIBLE = images/icons/im_unavailable_stale.png
 MESSAGE_AWAY = images/Away.png
 MESSAGE_DND = images/DoNotDisturb.png
 MESSAGE_NEW_TRAY = images/spark_tray_message-16x16.png
@@ -267,7 +267,7 @@ STAR_MODERATOR = images/star_moderator.png
 LEFT_ARROW_IMAGE = images/arrow_left_green.png
 RIGHT_ARROW_IMAGE = images/arrow_right_green.png
 BACKGROUND_IMAGE = images/background.png
-FREE_TO_CHAT_IMAGE = images/im_free_chat.png
+FREE_TO_CHAT_IMAGE = images/icons/im_free_chat.png
 SOUND_PREFERENCES_IMAGE = images/icons/sound.png
 SPARK_LOGOUT_IMAGE = images/spark_100.jpg
 PHOTO_IMAGE = images/icons/screenshot24.png
@@ -329,12 +329,12 @@ TRANSPORT_ICON = images/transport.png
 SMALL_STOP = images/smallStop.png
 
 #Stale Images
-IM_AVAILABLE_STALE_IMAGE = images/im_available_stale.png
-IM_AWAY_STALE_IMAGE = images/im_away_stale.png
-IM_XA_STALE_IMAGE = images/im_xa_stale.png
-IM_DND_STALE_IMAGE = images/im_dnd_stale.png
-IM_FREE_CHAT_STALE_IMAGE = images/im_free_chat_stale.png
-IM_UNAVAILABLE_STALE_IMAGE = images/im_unavailable_stale.png
+IM_AVAILABLE_STALE_IMAGE = images/icons/im_available_stale.png
+IM_AWAY_STALE_IMAGE = images/icons/im_away_stale.png
+IM_XA_STALE_IMAGE = images/icons/im_xa_stale.png
+IM_DND_STALE_IMAGE = images/icons/im_dnd_stale.png
+IM_FREE_CHAT_STALE_IMAGE = images/icons/im_free_chat_stale.png
+IM_UNAVAILABLE_STALE_IMAGE = images/icons/im_unavailable_stale.png
 
 #Misc
 DIVIDER_IMAGE = images/divider.png
