--- a/core/src/main/resources/spark.properties
+++ b/core/src/main/resources/spark.properties
@@ -36,15 +36,15 @@ PRIVACY_DEACTIVATE_LIST = images/icons/privacy_list_deactivate.png
 #MainWindow
 MAIN_IMAGE = images/spark-64x64.png
 TRAY_IMAGE = images/spark-16x16.png
-TRAY_AWAY = images/Away.png
-TRAY_XAWAY = images/XAway.png
-TRAY_DND = images/DoNotDisturb.png
+TRAY_AWAY = images/icons/Away.png
+TRAY_XAWAY = images/icons/XAway.png
+TRAY_DND = images/icons/DoNotDisturb.png
 TRAY_OFFLINE = images/spark_tray_offline-16x16.png
 TRAY_CONNECTING = images/spark_tray_connecting-16x16.png
 TRAY_IMAGE_LINUX = images/spark-24x24.png
-TRAY_AWAY_LINUX = images/Away-24x24.png
-TRAY_XAWAY_LINUX = images/XAway-24x24.png
-TRAY_DND_LINUX = images/DoNotDisturb-24x24.png
+TRAY_AWAY_LINUX = images/icons/Away-24x24.png
+TRAY_XAWAY_LINUX = images/icons/XAway-24x24.png
+TRAY_DND_LINUX = images/icons/DoNotDisturb-24x24.png
 TRAY_OFFLINE_LINUX = images/spark_tray_offline-24x24.png
 TRAY_CONNECTING_LINUX = images/spark_tray_connecting-24x24.png
 SPARK_IMAGE_32x32 = images/spark-32x32.png
@@ -217,8 +217,8 @@ IM_DND = images/icons/im_dnd.png
 IM_AWAY = images/icons/im_away.png
 IM_XA = images/icons/im_xa.png
 INVISIBLE = images/icons/im_unavailable_stale.png
-MESSAGE_AWAY = images/Away.png
-MESSAGE_DND = images/DoNotDisturb.png
+MESSAGE_AWAY = images/icons/Away.png
+MESSAGE_DND = images/icons/DoNotDisturb.png
 MESSAGE_NEW_TRAY = images/spark_tray_message-16x16.png
 MESSAGE_NEW_TRAY_LINUX = images/spark_tray_message-24x24.png
 TYPING_TRAY = images/icons/edit.png
