fix "unavailable" icon

--- a/core/src/main/resources/spark.properties
+++ b/core/src/main/resources/spark.properties
@@ -231,7 +231,7 @@ SERVER_ICON = images/icons/conferences.png
 BOOKMARK_ICON = images/icons/bookmark.png
 ADD_BOOKMARK_ICON = images/icons/bookmark.png
 DELETE_BOOKMARK_ICON = images/icons/remove.png
-CLEAR_BALL_ICON = images/im_unavailable.png
+CLEAR_BALL_ICON = images/icons/im_unavailable.png
 CALL_ICON = images/call.png
 PROFILE_ICON = images/profile.png
 SEND_FILE_ICON = images/icons/send_file.png
