add new icons for star status

--- a/core/src/main/resources/spark.properties
+++ b/core/src/main/resources/spark.properties
@@ -256,14 +256,14 @@ SMALL_MESSAGE_IMAGE = images/icons/start_chat.png
 SMALL_MESSAGE_EDIT_IMAGE = images/icons/edit.png
 SMALL_ABOUT_IMAGE = images/icons/about.png
 DOOR_IMAGE = images/icons/join.png
-STAR_BLUE_IMAGE = images/star_blue.png
-STAR_RED_IMAGE = images/star_red.png
-STAR_GREY_IMAGE = images/star_grey.png
-STAR_YELLOW_IMAGE = images/star_yellow.png
-STAR_GREEN_IMAGE = images/star_green.png
-STAR_OWNER = images/star_owner.png
-STAR_ADMIN = images/star_admin.png
-STAR_MODERATOR = images/star_moderator.png
+STAR_BLUE_IMAGE = images/icons/star_blue.png
+STAR_RED_IMAGE = images/icons/star_red.png
+STAR_GREY_IMAGE = images/icons/star.png
+STAR_YELLOW_IMAGE = images/icons/star_yellow.png
+STAR_GREEN_IMAGE = images/icons/star_green.png
+STAR_OWNER = images/icons/star_owner.png
+STAR_ADMIN = images/icons/star_admin.png
+STAR_MODERATOR = images/icons/star_moderator.png
 LEFT_ARROW_IMAGE = images/arrow_left_green.png
 RIGHT_ARROW_IMAGE = images/arrow_right_green.png
 BACKGROUND_IMAGE = images/background.png
