add new icon for conference

--- a/core/src/main/resources/spark.properties
+++ b/core/src/main/resources/spark.properties
@@ -117,7 +117,7 @@ EARTH_VIEW_16x16 = images/earth_view.png
 HISTORY_16x16 = images/icons/history.png
 DOWNLOAD_16x16 = images/icons/downloads.png
 CHECK_UPDATE = images/icons/check_update.png
-RED_FLAG_16x16 = images/flag_red.png
+RED_FLAG_16x16 = images/icons/ban.png
 GREEN_FLAG_16x16 = images/flag_green.png
 YELLOW_FLAG_16x16 = images/flag_yellow.png
 FUNNEL_DOWN_16x16 = images/funnel_down.png
@@ -138,7 +138,7 @@ MAGICIAN_IMAGE = images/magician.png
 FIND_TEXT_IMAGE = images/icons/lookup.png
 LOGIN_KEY_IMAGE = images/icons/login.png
 BRICKWALL_IMAGE = images/icons/block.png
-MODERATOR_IMAGE = images/moderator.gif
+MODERATOR_IMAGE = images/icons/moderator.png
 DESKTOP_IMAGE = images/icons/tasklist.png
 SPELL_CHECK_IMAGE = images/spellcheck_16x16.png
 BUSY_IMAGE = images/busy.gif
