--- a/plugins/fastpath/src/main/resources/fastpath.properties
+++ b/plugins/fastpath/src/main/resources/fastpath.properties
@@ -81,7 +81,7 @@ MEGAPHONE_16x16 = images/icons/broadcast.png
 EARTH_VIEW_16x16 = images/earth_view.png
 HISTORY_16x16 = images/icons/history.png
 DOWNLOAD_16x16 = images/icons/downloads.png
-RED_FLAG_16x16 = images/flag_red.png
+RED_FLAG_16x16 = images/icons/ban.png
 GREEN_FLAG_16x16 = images/flag_green.png
 YELLOW_FLAG_16x16 = images/flag_yellow.png
 FUNNEL_DOWN_16x16 = images/funnel_down.png
@@ -89,7 +89,7 @@ MAIL_16x16 = images/mail_16x16.png
 MAIL_FORWARD_16x16 = images/mail_forward_16x16.png
 MAIL_INTO_16x16 = images/mail_into_16x16.png
 RED_BALL = images/red-ball.png
-GREEN_BALL = images/green-ball.png
+GREEN_BALL = images/icons/im_available.png
 BLUE_BALL = images/blue-ball.png
 YELLOW_BALL = images/yellow-ball.png
 PAWN_GLASS_GREEN = images/pawn_glass_green.png
@@ -102,7 +102,7 @@ MAGICIAN_IMAGE = images/magician.png
 FIND_TEXT_IMAGE = images/icons/lookup.png
 LOGIN_KEY_IMAGE = images/icons/login.png
 BRICKWALL_IMAGE = images/icons/block.png
-MODERATOR_IMAGE = images/moderator.gif
+MODERATOR_IMAGE = images/icons/moderator.png
 DESKTOP_IMAGE = images/icons/tasklist.png
 SPELL_CHECK_IMAGE = images/text_ok.png
 BUSY_IMAGE = images/busy.gif
@@ -169,8 +169,8 @@ SEARCH_USER_16x16 = images/icons/search.png
 SEND_FILE_24x24 = images/icons/send_file24.png
 ADD_IMAGE_24x24 = images/icons/add_user_24.png
 TELEPHONE_24x24 = images/icons/phone.png
-IM_DND = images/im_dnd.png
-IM_AWAY = images/im_away.png
+IM_DND = images/icons/im_dnd.png
+IM_AWAY = images/icons/im_away.png
 MESSAGE_AWAY = images/message_away.png
 MESSAGE_DND = images/message_dnd.png
 ERASER_IMAGE = images/icons/clear.png
@@ -180,7 +180,7 @@ SERVER_ICON = images/icons/conferences.png
 BOOKMARK_ICON = images/icons/bookmark.png
 ADD_BOOKMARK_ICON = images/icons/bookmark.png
 DELETE_BOOKMARK_ICON = images/icons/remove.png
-CLEAR_BALL_ICON = images/bullet_ball_glass_clear.png
+CLEAR_BALL_ICON = images/icons/im_unavailable.png
 CALL_ICON = images/call.png
 PROFILE_ICON = images/profile.png
 SEND_FILE_ICON = images/icons/send_file.png
@@ -204,15 +204,15 @@ SMALL_MESSAGE_IMAGE = images/icons/start_chat.png
 SMALL_MESSAGE_EDIT_IMAGE = images/icons/edit.png
 SMALL_ABOUT_IMAGE = images/icons/about.png
 DOOR_IMAGE = images/icons/join.png
-STAR_BLUE_IMAGE = images/star_blue.png
-STAR_RED_IMAGE = images/star_red.png
-STAR_GREY_IMAGE = images/star_grey.png
-STAR_YELLOW_IMAGE = images/star_yellow.png
-STAR_GREEN_IMAGE = images/star_green.png
+STAR_BLUE_IMAGE = images/icons/star_blue.png
+STAR_RED_IMAGE = images/icons/star_red.png
+STAR_GREY_IMAGE = images/icons/star.png
+STAR_YELLOW_IMAGE = images/icons/star_yellow.png
+STAR_GREEN_IMAGE = images/icons/star_green.png
 LEFT_ARROW_IMAGE = images/arrow_left_green.png
 RIGHT_ARROW_IMAGE = images/arrow_right_green.png
 BACKGROUND_IMAGE = images/background.png
-FREE_TO_CHAT_IMAGE = images/im_free_chat.png
+FREE_TO_CHAT_IMAGE = images/icons/im_free_chat.png
 SOUND_PREFERENCES_IMAGE = images/icons/sound.png
 SPARK_LOGOUT_IMAGE = images/spark_100.jpg
 PHOTO_IMAGE = images/icons/screenshot24.png
