Replace old icons(folder.png)

--- a/core/src/main/resources/spark.properties
+++ b/core/src/main/resources/spark.properties
@@ -74,8 +74,8 @@ CHATTING_CUSTOMER_IMAGE = images/user2.png
 INFORMATION_IMAGE = images/icons/about.png
 BLANK_IMAGE = images/blank.gif
 USER_HEADSET_24x24 = images/user_headset24.png
-FOLDER_CLOSED = images/folder_closed.png
-FOLDER = images/folder.png
+FOLDER_CLOSED = images/icons/folder.png
+FOLDER = images/icons/folder.png
 SMALL_PIN_BLUE = images/pin_blue.png
 SMALL_DATA_FIND_IMAGE = images/icons/search.png
 SMALL_BUSINESS_MAN_VIEW = images/icons/edit_profile.png
