replace old links with icons

--- a/core/src/main/resources/spark.properties
+++ b/core/src/main/resources/spark.properties
@@ -143,7 +143,7 @@ DESKTOP_IMAGE = images/icons/tasklist.png
 SPELL_CHECK_IMAGE = images/spellcheck_16x16.png
 BUSY_IMAGE = images/busy.gif
 CLOSE_IMAGE = images/icons/close.png
-VIEW_IMAGE = images/view.png
+VIEW_IMAGE = images/icons/search.png
 MOBILE_PHONE_IMAGE = images/mobilephone.png
 ON_PHONE_IMAGE = images/icons/on-phone.png
 REFRESH_IMAGE = images/icons/refresh.png
@@ -272,7 +272,7 @@ SOUND_PREFERENCES_IMAGE = images/icons/sound.png
 SPARK_LOGOUT_IMAGE = images/spark_100.jpg
 PHOTO_IMAGE = images/icons/screenshot24.png
 PLUGIN_IMAGE = images/icons/plugins.png
-SMALL_PROFILE_IMAGE = images/small_profile.png
+SMALL_PROFILE_IMAGE = images/icons/profile.png
 CHANGELOG_IMAGE = images/doc-changelog-16x16.gif
 README_IMAGE = images/doc-readme-16x16.gif
 DOWN_OPTION_IMAGE = images/option.png
