idle time shouldn't not hardcoded

--- a/core/src/main/resources/default.properties
+++ b/core/src/main/resources/default.properties
@@ -167,6 +167,9 @@ IDLE_ON_LOCK = false
 # If true, disable editing the "Time till idle" option under "Setting" and sets the default value(5min)
 IDLE_TIME_LOCK = false
 
+# Idle time, default value = 5min
+
+IDLE_TIME = 15
 
 #################################################
 ################## File Transfer ################
