--- a/core/src/main/resources/default.properties
+++ b/core/src/main/resources/default.properties
@@ -161,14 +161,10 @@ DISABLE_VIEW_NOTES = false
 # If true, disable the "View task list" option under "Actions"
 DISABLE_VIEW_TASK_LIST = false
 
-# If true, disable editing the "Idle On" option under "Setting" and enable Idle on
-IDLE_ON_LOCK = false
-
-# If true, disable editing the "Time till idle" option under "Setting" and sets the default value(5min)
-IDLE_TIME_LOCK = false
+# If true, do not allow modify the Idle Settings and set client values for Idle Settings.
+IDLE_LOCK = false
 
 # Idle time, default value = 5min
-
 IDLE_TIME = 5
 
 #################################################
