SPARK-2256 Add control over idle settings (#674)

--- a/core/src/main/resources/default.properties
+++ b/core/src/main/resources/default.properties
@@ -159,6 +159,12 @@ DISABLE_VIEW_NOTES = false
 # If true, disable the "View task list" option under "Actions"
 DISABLE_VIEW_TASK_LIST = false
 
+# If true, do not allow modify the Idle Settings and set client values for Idle Settings.
+IDLE_LOCK = false
+
+# Idle time, default value = 5min
+IDLE_TIME = 5
+
 #################################################
 ################## File Transfer ################
 #################################################
