SPARK-2235 Stop requiring OCSP
1.OCSP should be disabled by default.
2.We have to handle the exception "Certificate does not specify OCSP responder"

I'm confused, maybe I should drop OCSP and remove it. How do you think?

--- a/core/src/main/resources/default.properties
+++ b/core/src/main/resources/default.properties
@@ -81,7 +81,7 @@ ACCEPT_NOT_VALID_YET = false
 ACCEPT_SELF_SIGNED = false
 ACCEPT_REVOKED = false
 CHECK_CRL = true
-CHECK_OCSP = true
+CHECK_OCSP = false
 ALLOW_SOFT_FAIL = true
 
 
