add new icon "loading" for new Look and feel

--- a/core/src/main/resources/spark.properties
+++ b/core/src/main/resources/spark.properties
@@ -141,7 +141,7 @@ BRICKWALL_IMAGE = images/icons/block.png
 MODERATOR_IMAGE = images/icons/moderator.png
 DESKTOP_IMAGE = images/icons/tasklist.png
 SPELL_CHECK_IMAGE = images/spellcheck_16x16.png
-BUSY_IMAGE = images/busy.gif
+BUSY_IMAGE = images/icons/busy.gif
 CLOSE_IMAGE = images/icons/close.png
 VIEW_IMAGE = images/icons/search.png
 MOBILE_PHONE_IMAGE = images/mobilephone.png
