--- a/core/src/main/resources/default.properties
+++ b/core/src/main/resources/default.properties
@@ -316,12 +316,9 @@ LOOK_AND_FEEL_DISABLED =
 # Preferences -> Appearance -> ColorTab
 CHANGE_COLORS_DISABLED =
 # Changes the Default Look&Feel, if empty it will load the SystemSkin
-# Default Spark skin is com.jtattoo.plaf.luna.LunaLookAndFeel
-# other nice skin is org.jvnet.substance.skin.SubstanceBusinessBlueSteelLookAndFeel
-DEFAULT_LOOK_AND_FEEL = com.jtattoo.plaf.luna.LunaLookAndFeel
+# Default Spark skin is org.jivesoftware.spark.ui.themes.lafs.SparkLightLaf
+DEFAULT_LOOK_AND_FEEL = org.jivesoftware.spark.ui.themes.lafs.SparkLightLaf
 DEFAULT_LOOK_AND_FEEL_MAC =
-# in JTatto menu bars can have Texts, default is empty
-MENUBAR_TEXT =
 
 # tabs are placed on bottom by default. if set to true will be placed on top
 TABS_PLACEMENT_TOP =
