Use a red color icon when hovering the mouse over the icon

--- a/core/src/main/resources/spark.properties
+++ b/core/src/main/resources/spark.properties
@@ -148,7 +148,7 @@ MOBILE_PHONE_IMAGE = images/mobilephone.png
 ON_PHONE_IMAGE = images/icons/on-phone.png
 REFRESH_IMAGE = images/icons/refresh.png
 CLOSE_WHITE_X_IMAGE = images/icons/close.png
-CLOSE_DARK_X_IMAGE = images/icons/close.png
+CLOSE_RED_X_IMAGE = images/icons/close_red.png
 PALETTE_24x24_IMAGE = images/icons/appearance.png
 NOTIFICATIONS = images/icons/notifications.png
 COLOR_ICON = images/icons/colors.png
