small redesign of the search bar

--- a/plugins/fastpath/src/main/resources/fastpath.properties
+++ b/plugins/fastpath/src/main/resources/fastpath.properties
@@ -220,7 +220,7 @@ PLUGIN_IMAGE = images/icons/plugins.png
 SMALL_PROFILE_IMAGE = images/small_profile.png
 CHANGELOG_IMAGE = images/doc-changelog-16x16.gif
 README_IMAGE = images/doc-readme-16x16.gif
-DOWN_OPTION_IMAGE = images/option.png
+DOWN_OPTION_IMAGE = images/icons/collapse_down.png
 STICKY_NOTE_IMAGE = images/sticky.png
 HISTORY_24x24 = images/icons/history24.png
 PANE_UP_ARROW_IMAGE = images/icons/collapse_up.png
