--- a/plugins/fileupload/pom.xml
+++ b/plugins/fileupload/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.igniterealtime.spark.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>3.0.0-SNAPSHOT</version>
+        <version>3.0.0</version>
         <relativePath>../plugin/pom.xml</relativePath>
     </parent>
 
