--- a/plugins/systemtray/pom.xml
+++ b/plugins/systemtray/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.igniterealtime.spark.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>3.0.1</version>
+        <version>3.0.2-SNAPSHOT</version>
         <relativePath>../plugin/pom.xml</relativePath>
     </parent>
 
