SPARK-1457 Update Translator plugin (#774)
* Update Translator plugin to use other translation API

* Add Preference panel

* update libretranslate-java to 1.0.5

--- a/plugins/translator/pom.xml
+++ b/plugins/translator/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>translator</artifactId>
-    <version>1.7</version>
+    <version>2.0</version>
 
     <name>Translator Plugin</name>
     <description>Translates instant messages between users using Google Translation Service.</description>
@@ -26,16 +26,23 @@
 
     <dependencies>
         <dependency>
-            <groupId>httpunit</groupId>
-            <artifactId>httpunit</artifactId>
-            <version>1.7</version>
-        </dependency>
-        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>net.clojars.suuft</groupId>
+            <artifactId>libretranslate-java</artifactId>
+            <version>1.0.5</version>
+        </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>clojars.org</id>
+            <url>https://repo.clojars.org</url>
+        </repository>
+    </repositories>
 
 </project>
