--- a/.transifex.yml
+++ b/.transifex.yml
@@ -5,3 +5,33 @@ git:
     file_format: UNICODEPROPERTIES
     translation_files_expression: 'core/src/main/resources/i18n/spark_i18n_<lang>.properties'
     source_language: en
+  - filter_type: file
+    source_file: plugins/fastpath/src/main/resources/i18n/fastpath_i18n.properties
+    file_format: UNICODEPROPERTIES
+    translation_files_expression: 'plugins/fastpath/src/main/resources/i18n/fastpath_i18n_<lang>.properties'
+    source_language: en
+  - filter_type: file
+    source_file: plugins/meet/src/main/resources/i18n/meet_i18n.properties
+    file_format: UNICODEPROPERTIES
+    translation_files_expression: 'plugins/meet/src/main/resources/i18n/meet_i18n_<lang>.properties'
+    source_language: en
+  - filter_type: file
+    source_file: plugins/roar/src/main/resources/i18n/roar_i18n.properties
+    file_format: UNICODEPROPERTIES
+    translation_files_expression: 'plugins/roar/src/main/resources/i18n/roar_i18n_<lang>.properties'
+    source_language: en
+  - filter_type: file
+    source_file: plugins/spelling/src/main/resources/i18n/spellchecker_i18n.properties
+    file_format: UNICODEPROPERTIES
+    translation_files_expression: 'plugins/spelling/src/main/resources/i18n/spellchecker_i18n_<lang>.properties'
+    source_language: en
+  - filter_type: file
+    source_file: plugins/transferguard/src/main/resources/i18n/transferguard_i18n.properties
+    file_format: UNICODEPROPERTIES
+    translation_files_expression: 'plugins/transferguard/src/main/resources/i18n/transferguard_i18n_<lang>.properties'
+    source_language: en
+  - filter_type: file
+    source_file: plugins/translator/src/main/resources/i18n/translator_i18n.properties
+    file_format: UNICODEPROPERTIES
+    translation_files_expression: 'plugins/translator/src/main/resources/i18n/translator_i18n_<lang>.properties'
+    source_language: en
