Split icons into light and dark themes

--- a/core/src/main/resources/spark.properties
+++ b/core/src/main/resources/spark.properties
@@ -80,7 +80,7 @@ SMALL_PIN_BLUE = images/pin_blue.png
 SMALL_DATA_FIND_IMAGE = images/icons/light/search.png
 SMALL_BUSINESS_MAN_VIEW = images/icons/light/edit_profile.png
 SMALL_ALL_AGENTS_IMAGE = images/user1_earth.png
-SMALL_WORKGROUP_QUEUE_IMAGE = images/icons/light/light/start_conference.png
+SMALL_WORKGROUP_QUEUE_IMAGE = images/icons/light/start_conference.png
 SMALL_ALL_CHATS_IMAGE = images/icons/light/contacts.png
 SMALL_CURRENT_AGENTS = images/icons/light/users.png
 HELP2_24x24 = images/icons/light/help.png
@@ -104,7 +104,7 @@ LINK_DELETE_16x16 = images/icons/light/link_delete.png
 EARTH_LOCK_16x16 = images/earth_lock-16x16.png
 LOCK_16x16 = images/icons/light/lock.png
 BLOCK_CONTACT_16x16 = images/icons/light/block.png
-UNBLOCK_CONTACT_16x16 = images/icons/light/light/unblock.png
+UNBLOCK_CONTACT_16x16 = images/icons/light/unblock.png
 LOCK_UNLOCK_16x16 = images/icons/light/unlock.png
 ONLINE_ICO = images/icon1.ico
 OFFLINE_ICO = images/icon2.ico
@@ -140,7 +140,6 @@ LOGIN_KEY_IMAGE = images/icons/light/login.png
 BRICKWALL_IMAGE = images/icons/light/block.png
 MODERATOR_IMAGE = images/icons/light/moderator.png
 DESKTOP_IMAGE = images/icons/light/tasklist.png
-SPELL_CHECK_IMAGE = images/spellcheck_16x16.png
 BUSY_IMAGE = images/icons/light/busy.gif
 CLOSE_IMAGE = images/icons/light/close.png
 VIEW_IMAGE = images/icons/light/search.png
@@ -237,7 +236,7 @@ PROFILE_ICON = images/icons/light/profile.png
 SEND_FILE_ICON = images/icons/light/send_file.png
 ADD_CONTACT_IMAGE = images/icons/light/add_user.png
 JOIN_GROUPCHAT_IMAGE = images/icons/light/join.png
-PEOPLE_IMAGE = images/icons/add_user.png
+PEOPLE_IMAGE = images/icons/light/add_user.png
 DOWN_ARROW_IMAGE = images/down_arrow.gif
 PRINTER_IMAGE_16x16 = images/icons/light/print.png
 SEND_MAIL_IMAGE_16x16 = images/sendmail.png
@@ -266,7 +265,6 @@ STAR_ADMIN = images/icons/star_admin.png
 STAR_MODERATOR = images/icons/star_moderator.png
 LEFT_ARROW_IMAGE = images/arrow_left_green.png
 RIGHT_ARROW_IMAGE = images/arrow_right_green.png
-BACKGROUND_IMAGE = images/background.png
 FREE_TO_CHAT_IMAGE = images/icons/im_free_chat.png
 SOUND_PREFERENCES_IMAGE = images/icons/light/sound.png
 SPARK_LOGOUT_IMAGE = images/spark_100.jpg
@@ -289,7 +287,6 @@ TASK_DELETE_IMAGE = images/delete.png
 #Fastpath Icons
 FASTPATH_IMAGE_16x16 = images/fastpath16.png
 FASTPATH_IMAGE_24x24 = images/fastpath24.png
-FASTPATH_IMAGE_32x32 = images/fastpath32.png
 CIRCLE_CHECK_IMAGE = images/check.png
 TRANSFER_IMAGE_24x24 = images/icons/light/add_user_24.png
 FASTPATH_OFFLINE_IMAGE_16x16 = images/fastpath16_offline.png
