add image in prop

--- a/core/src/main/resources/spark.properties
+++ b/core/src/main/resources/spark.properties
@@ -327,8 +327,8 @@ FILTER_LABEL = Search
 LANGUAGE_ICON = images/icons/light/language.png
 EXECUTABLE_NAME = Spark.exe
 
-
 #new icons
 UPLOAD_ICON = images/icons/light/upload.png
 PADE_ICON = images/icons/light/pade.png
 NEW_MESSAGE = images/icons/incoming_message.png
+PROGRESS_ICON = images/icons/light/ripple.gif
