MacOS Should use SparkMacLight LaF use by default

--- a/core/src/main/resources/default.properties
+++ b/core/src/main/resources/default.properties
@@ -318,6 +318,7 @@ CHANGE_COLORS_DISABLED =
 # Changes the Default Look&Feel, if empty it will load the SystemSkin
 # Default Spark skin is org.jivesoftware.spark.ui.themes.lafs.SparkLightLaf
 DEFAULT_LOOK_AND_FEEL = org.jivesoftware.spark.ui.themes.lafs.SparkLightLaf
+DEFAULT_LOOK_AND_FEEL_MAC = org.jivesoftware.spark.ui.themes.lafs.SparkMacLightLaf
 
 # tabs are placed on bottom by default. if set to true will be placed on top
 TABS_PLACEMENT_TOP =
