Spark plugin for galene This plugin enables Spark users to join or create or join webinars hosted by the openfire galene plugin.

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@
         <module>plugins/growl</module>
         <!--<module>plugins/jingle</module>-->
         <module>plugins/meet</module>
+        <module>plugins/galene</module>		
         <!--<module>plugins/otr</module>-->
         <module>plugins/reversi</module>
         <module>plugins/roar</module>
