--- a/core/src/main/resources/default.properties
+++ b/core/src/main/resources/default.properties
@@ -165,6 +165,27 @@ IDLE_LOCK = false
 # Idle time, default value = 5min
 IDLE_TIME = 5
 
+# If true, disable Unfiled Group in the contacts list
+UNFILEDGROUP_DISABLED = false
+
+# If true, disable Nickname change in conference
+ALLOW_NICKNAME_CHANGE_DISABLED = false
+
+# If true, disable Room Settings button in conference
+CONFERENCE_BUTTON_SETTINGS_DISABLED = false
+
+# If true, disable Register button in conference
+CONFERENCE_BUTTON_REGISTER_DISABLED = false
+
+# If true, show the full JID address in the Contact Information Window from the Contacts List
+SHOW_FULL_JID_ADDRESS = false
+
+# If true, disable Personal, Business and Home Edit from Edit Profile and enable only the Avatar modification
+EDIT_AVATAR_ONLY = false
+
+# If true, Lookup Profile is desabled from Contacts Menu
+DISABLE_LOOKUP_PROFILE = false
+
 #################################################
 ################## File Transfer ################
 #################################################
