spark-core pom.xml: disable filter resources except of spark.properties

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -24,6 +24,9 @@
             <resource>
                 <directory>src/main/resources</directory>
                 <filtering>true</filtering>
+                <includes>
+                    <include>**/spark.properties</include>
+                </includes>
             </resource>
         </resources>
         <plugins>
