fix build spark

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -83,6 +83,11 @@
                     <mainClass>org.jivesoftware.launcher.Startup</mainClass>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.1.0</version>
+            </plugin>
         </plugins>
     </build>
     <dependencies>
